<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_incognito_tab_shortcut"
        android:enabled="true"
        android:icon="@drawable/shortcut_incognito"
        android:shortcutDisabledMessage="@string/shortcut_disabled"
        android:shortcutLongLabel="@string/menu_incognito"
        android:shortcutShortLabel="@string/menu_incognito">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.lineageos.jelly.MainActivity"
            android:targetPackage="com.oF2pks.browser4">
            <extra
                android:name="extra_incognito"
                android:value="true" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="favourites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:shortcutDisabledMessage="@string/shortcut_disabled"
        android:shortcutLongLabel="@string/menu_favorites"
        android:shortcutShortLabel="@string/menu_favorites">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.oF2pks.browser4"
            android:targetClass="org.lineageos.jelly.favorite.FavoriteActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="killall"
        android:enabled="true"
        android:icon="@drawable/ic_menu_kill_all"
        android:shortcutDisabledMessage="@string/shortcut_disabled"
        android:shortcutLongLabel="@string/kill_all"
        android:shortcutShortLabel="@string/kill_all">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.oF2pks.browser4"
            android:targetClass="org.lineageos.jelly.LaunchFileActivity" >
            <extra
                android:name="kill_all"
                android:value="true" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:shortcutDisabledMessage="@string/shortcut_disabled"
        android:shortcutLongLabel="@string/menu_history"
        android:shortcutShortLabel="@string/menu_history">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.oF2pks.browser4"
            android:targetClass="org.lineageos.jelly.history.HistoryActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="newtab"
        android:enabled="true"
        android:icon="@drawable/ic_new_tab"
        android:shortcutDisabledMessage="@string/shortcut_disabled"
        android:shortcutLongLabel="@string/menu_new_tab"
        android:shortcutShortLabel="@string/menu_new_tab">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.oF2pks.browser4"
            android:targetClass="org.lineageos.jelly.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>
